--- a/Leetcode_SQL.ipynb
+++ b/Leetcode_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIZkZ8HDfJg8GoTc/7C2br",
+      "authorship_tag": "ABX9TyN2ynRFzka1pEi39KnO4Ngq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -693,6 +693,31 @@
       ],
       "metadata": {
         "id": "n8vTJrWrpiyC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "31. Confirmation rate"
+      ],
+      "metadata": {
+        "id": "liAZTHh_4TZ_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "select sp.user_id,\n",
+        "case when cn.action IS NULL then 0.00\n",
+        "else round(sum(case when action='confirmed' then 1 else 0 end)/count(action),2) end as confirmation_rate\n",
+        "from signups sp left join confirmations cn on\n",
+        "sp.user_id=cn.user_id\n",
+        "group by sp.user_id;"
+      ],
+      "metadata": {
+        "id": "ZXx1BSYC4U-o"
       },
       "execution_count": null,
       "outputs": []
